Define JVM memory options in scripts used on developer box