@@ -1,2 +1,3 @@
 #!/bin/sh
+export MAVEN_OPTS='-Xmx768m -XX:MaxPermSize=128m'
 mvn clean jetty:run -Pstart-dev-server,derby
